MIFOSX-1613 : changes for overdue status and npa

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -11296,6 +11296,13 @@ An enumeration that indicates the type of transaction processing strategy to be 
 							</td>
 						</tr>
 						<tr class=alt>
+							<td>accountMovesOutOfNPAOnlyOnArrearsCompletion</td>
+						</tr>
+						<tr>
+							<td class=fielddesc>Optional: Boolean - if provided as true,  Loan Account moves out of NPA state only when all arrears are cleared
+							</td>
+						</tr>
+						<tr class=alt>
 							<td>accountingRule</td>
 						</tr>
 						<tr>
@@ -11355,6 +11362,12 @@ An enumeration that indicates the type of transaction processing strategy to be 
 						</tr>
 						<tr>
 							<td class=fielddesc>Specifies rest frequency start date for interest recalculation.<br>
+						</tr>
+						<tr class=alt>
+							<td>isArrearsBasedOnOriginalSchedule</td>
+						</tr>
+						<tr>
+							<td class=fielddesc>If Specified as true, arrears will be identified based on original schedule.<br>
 						</tr>
 					</table>
 				</div>
@@ -11470,7 +11483,8 @@ GET https://DomainName/api/v1/loanproducts
 		    "id":1,
 			"code":"interestRecalculationFrequencyType.same.as.repayment.period",
 			"value":"Same as repayment period"
-		}
+		},
+		"isArrearsBasedOnOriginalSchedule" : true
     },
     "accountingRule": {
       "id": 2,
@@ -12598,7 +12612,7 @@ GET https://DomainName/api/v1/loanproducts/{productId}
 							numberOfRepaymentVariationsForBorrowerCycle,
 							interestRateVariationsForBorrowerCycle,
 							multiDisburseLoan,maxTrancheCount,
-							outstandingLoanBalance,overdueDaysForNPA,holdGuaranteeFunds
+							outstandingLoanBalance,overdueDaysForNPA,accountMovesOutOfNPAOnlyOnArrearsCompletion,holdGuaranteeFunds
 							</td>
 						</tr>
 					</table>
@@ -12629,6 +12643,14 @@ GET https://DomainName/api/v1/loanproducts/{productId}
 						</tr>
 						<tr class=alt>
 							<td>interestRecalculationCompoundingMethod, rescheduleStrategyMethod, recalculationRestFrequencyType</td>
+						</tr>
+					</table>
+					<table class=matrixHeading>						
+						<tr class="matrixHeadingBG">
+							<td><div class="mifosXHeading2">Additional Optional Fields if interest recalculation is enabled(true) </div></td>
+						</tr>
+						<tr class=alt>
+							<td>isArrearsBasedOnOriginalSchedule</td>
 						</tr>
 					</table>
 					<table class=matrixHeading>						
