--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -30106,6 +30106,7 @@ GET https://DomainName/api/v1/users
         "firstname": "App",
         "lastname": "Administrator",
         "email": "demomfi@mifos.org",
+        "passwordNeverExpire": false,
         "staff": {
 		   "id": 1,
 		   "firstname": "Test",
@@ -30197,6 +30198,7 @@ GET https://DomainName/api/v1/users/{userId}
     "firstname": "App",
     "lastname": "Administrator",
     "email": "demomfi@mifos.org",
+    "passwordNeverExpire": true,
     "staff": {
 	 "id": 1,
 	 "firstname": "Test",
@@ -30246,7 +30248,7 @@ GET https://DomainName/api/v1/users/{userId}
 							<td><div class="mifosXHeading2">Optional Fields</div></td>
 						</tr>
 						<tr>
-							<td>staffId</td>
+							<td>staffId,passwordNeverExpire</td>
 						</tr>
 					</table>
 				</div>
