cleaning up MIFOSX-1868

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -30112,7 +30112,7 @@ GET https://DomainName/api/v1/users
         "firstname": "App",
         "lastname": "Administrator",
         "email": "demomfi@mifos.org",
-        "passwordNeverExpire": false,
+        "passwordNeverExpires": false,
         "staff": {
 		   "id": 1,
 		   "firstname": "Test",
@@ -30204,7 +30204,7 @@ GET https://DomainName/api/v1/users/{userId}
     "firstname": "App",
     "lastname": "Administrator",
     "email": "demomfi@mifos.org",
-    "passwordNeverExpire": true,
+    "passwordNeverExpires": true,
     "staff": {
 	 "id": 1,
 	 "firstname": "Test",
@@ -30254,7 +30254,7 @@ GET https://DomainName/api/v1/users/{userId}
 							<td><div class="mifosXHeading2">Optional Fields</div></td>
 						</tr>
 						<tr>
-							<td>staffId,passwordNeverExpire</td>
+							<td>staffId,passwordNeverExpires</td>
 						</tr>
 					</table>
 				</div>
