--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -11572,6 +11572,12 @@ An enumeration that indicates the type of transaction processing strategy to be 
 						<tr>
 							<td class=fielddesc>If Specified as true, arrears will be identified based on original schedule.<br>
 						</tr>
+						<tr class=alt>
+							<td>allowAttributeOverrides</td>
+						</tr>
+						<tr>
+							<td class=fielddesc>Specifies if select attributes may be overridden for individual loan accounts.<br>
+						</tr>
 					</table>
 				</div>
 			</div>
@@ -12817,7 +12823,7 @@ GET https://DomainName/api/v1/loanproducts/{productId}
 							numberOfRepaymentVariationsForBorrowerCycle,
 							interestRateVariationsForBorrowerCycle,
 							multiDisburseLoan,maxTrancheCount,
-							outstandingLoanBalance,overdueDaysForNPA,holdGuaranteeFunds, principalThresholdForLastInstalment, accountMovesOutOfNPAOnlyOnArrearsCompletion, canDefineInstallmentAmount, installmentAmountInMultiplesOf
+							outstandingLoanBalance,overdueDaysForNPA,holdGuaranteeFunds, principalThresholdForLastInstalment, accountMovesOutOfNPAOnlyOnArrearsCompletion, canDefineInstallmentAmount, installmentAmountInMultiplesOf, allowAttributeOverrides
 							</td>
 						</tr>
 					</table>
@@ -12920,6 +12926,16 @@ Request Body:
 		"maxValue":"20"
 	}
 ],
+"allowAttributeOverrides":
+	{amortizationType : true,	
+	 interestType : true,
+	 transactionProcessingStrategyId : false,
+	 interestCalculationPeriodType : true,
+	 inArrearsTolerance : false,
+	 repaymentEvery : true,
+	 graceOnPrincipalAndInterestPayment : true,
+	 graceOnArrearsAgeing : true},
+	 
 "accountingRule":"2",
 "name":"product 5",
 "shortName":"prd5",
