--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -11567,10 +11567,10 @@ An enumeration that indicates the type of transaction processing strategy to be 
 							<td class=fielddesc>Specifies rest frequency start date for interest recalculation.<br>
 						</tr>
 						<tr class=alt>
-							<td>preCloseInterestCalculationStrategy</td>
+							<td>preClosureInterestCalculationStrategy</td>
 						</tr>
 						<tr>
-							<td class=fielddesc>Specifies applicable days for interest calculation on pre close of a loan.<br>
+							<td class=fielddesc>Specifies applicable days for interest calculation on pre closure of a loan.<br>
 							<span>Example Values:</span>1=Calculate till pre closure date, 2=Calculate till rest frequency date</td>
 						</tr>
 						<tr class=alt>
@@ -11694,7 +11694,7 @@ GET https://DomainName/api/v1/loanproducts
 			"code":"interestRecalculationFrequencyType.same.as.repayment.period",
 			"value":"Same as repayment period"
 		},
-		"preCloseInterestCalculationStrategy": {
+		"preClosureInterestCalculationStrategy": {
 		    "id":1,
 			"code":"loanPreClosureInterestCalculationStrategy.tillPreClosureDate",
 			"value":"Till preclose Date"
@@ -11801,7 +11801,7 @@ GET https://DomainName/api/v1/loanproducts/template
             "id": 3,
             "code": "loanRescheduleStrategyMethod.reduce.emi.amount",
             "value": "Reduce EMI amount"
-        },"preCloseInterestCalculationStrategy": {
+        },"preClosureInterestCalculationStrategy": {
 		    "id":1,
 			"code":"loanPreClosureInterestCalculationStrategy.tillPreClosureDate",
 			"value":"Till preclose Date"
@@ -12883,7 +12883,7 @@ GET https://DomainName/api/v1/loanproducts/{productId}
 							<td><div class="mifosXHeading2">Additional Optional Fields if interest recalculation is enabled(true) </div></td>
 						</tr>
 						<tr class=alt>
-							<td>isArrearsBasedOnOriginalSchedule, preCloseInterestCalculationStrategy</td>
+							<td>isArrearsBasedOnOriginalSchedule, preClosureInterestCalculationStrategy</td>
 						</tr>
 					</table>
 					<table class=matrixHeading>						
@@ -13009,7 +13009,7 @@ Request Body:
     "interestRecalculationCompoundingMethod":"0",
     "rescheduleStrategyMethod":"3",
 	"recalculationRestFrequencyType":"1",
-	"preCloseInterestCalculationStrategy":1,
+	"preClosureInterestCalculationStrategy":1,
     "accountingRule":"2",
     "fundSourceAccountId":"4",
     "loanPortfolioAccountId":"8",
