--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -31176,13 +31176,15 @@ GET https://DomainName/api/v1/passwordpreferences/template
 [
 {
 "id": 1,
-"description": "Password most be at least 1 character and not more that 50 characters long",
-"active": true
+"description": "Password must be at least 1 character and not more that 50 characters long",
+"active": true,
+"key" : "simple"
 },
 {
 "id": 2,
 "description": "Password must be at least 6 characters, no more than 50 characters long, must include at least one upper case letter, one lower case letter, one numeric digit and no space",
-"active": false
+"active": false,
+"key" : "secure"
 }
 ]
 					</code>
@@ -31196,7 +31198,8 @@ GET https://DomainName/api/v1/passwordpreferences/
 {
 "id": 1,
 "description": "Password most be at least 1 character and not more that 50 characters long",
-"active": true
+"active": true,
+"key" : "simple"
 }
 					</code>
 				</div>
