MIFOSX-1992 Introducing account# to groups and centers.Also expand scope to group and center search API.

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -15735,6 +15735,16 @@ GET https://DomainName/api/v1/accountnumberformats/template
                "id": 3,
                "code": "accountType.savings",
                "value": "SAVINGS"
+           },
+           {
+               "id": 4,
+               "code": "accountType.center",
+               "value": "CENTER"
+           },
+           {
+               "id": 5,
+               "code": "accountType.group",
+               "value": "GROUP"
            }
        ],
        "prefixTypeOptions":
@@ -15777,6 +15787,22 @@ GET https://DomainName/api/v1/accountnumberformats/template
                    "code": "accountNumberPrefixType.officeName",
                    "value": "OFFICE_NAME"
                }
+           ],
+           "accountType.center":
+           [
+               {
+                   "id": 1,
+                   "code": "accountNumberPrefixType.officeName",
+                   "value": "OFFICE_NAME"
+               }
+           ],
+           "accountType.group":
+           [
+               {
+                   "id": 1,
+                   "code": "accountNumberPrefixType.officeName",
+                   "value": "OFFICE_NAME"
+               },
            ]
        }
     }
