MIFOSX-1992 Addressed review comments for 1992.

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -33132,7 +33132,11 @@ Request Body:
 							<td rowspan=2><a href="#groups">Group</a></td>
 							<td>Name</td>
 						</td>
-						<tr>
+						<tr class=alt>
+							<td>Account Number</td>
+						</tr>
+						<tr class=alt>
+							<td></td>
 							<td>External Id</td>
 						</td>
 					</table>
