MIFOSX-1592 Fix for Global search api - group loans/savings search are now working as expected.

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -33217,7 +33217,8 @@ GET https://DomainName/api/v1/search?query=000000111
     "entityName": "12-A Flat Loan",
     "entityType": "LOAN",
     "parentId": 65,
-    "parentName": "aaaa aaaaa"
+    "parentName": "aaaa aaaaa",
+    "parentType": "client"
   }
 ]
 					</code>
