corrected misspelled payment type API in  API-Docs

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
@@ -34958,7 +34958,7 @@ No Request Body:
 				</div>
 				<div class="method-example">
 					<code class="method-declaration">
-					POST https://DomainName/api/v1/paymenttype
+					POST https://DomainName/api/v1/paymenttypes
 					</code>
 					<code class="method-request">
 					POST paymenttype
@@ -34990,7 +34990,7 @@ No Request Body:
 				</div>
 				<div class="method-example">
 					<code class="method-declaration">
-					GET https://DomainName/api/v1/paymenttype
+					GET https://DomainName/api/v1/paymenttypes
 					</code>
 					<code class="method-response">
 					[
@@ -35042,7 +35042,7 @@ No Request Body:
 				</div>
 				<div class="method-example">
 					<code class="method-declaration">
-					GET https://DomainName/api/v1/paymenttype/{paymentTypeId}
+					GET https://DomainName/api/v1/paymenttypes/{paymentTypeId}
 					</code>
 					<code class="method-response">
 					{
@@ -35063,10 +35063,10 @@ No Request Body:
 				</div>
 				<div class="method-example">
 					<code class="method-declaration">
-					PUT https://DomainName/api/v1/paymenttype/{paymnetTypeId}
+					PUT https://DomainName/api/v1/paymenttypes/{paymnetTypeId}
 					</code>
 					<code class="method-request">
-					PUT interestratecharts/1/paymenttype/13
+					PUT /paymenttypes/13
 					{
 					"name":"mPay",
 					"description":"not a cash payment type",
@@ -35090,10 +35090,10 @@ No Request Body:
 				</div>
 				<div class="method-example">
 					<code class="method-declaration">
-					DELETE https://DomainName/api/v1/paymenttype/{paymentTypeId}
+					DELETE https://DomainName/api/v1/paymenttypes/{paymentTypeId}
 					</code>
 					<code class="method-request">
-					DELETE paymnettype/13
+					DELETE paymnettypes/13
 					Content-Type: application/json
 					No Request Body:
 					</code>
