MIFOSX-2049 and fix failing test cases

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -35848,8 +35848,8 @@ Request Body:
 				<div class="method-description">
 					<h4>List Client Charges</h4>
 						
-					<p>The <i>list</i> capability of client charges can support <b>pagination</b> and <b>sorting</b>.</p>
-					<h5>Mandatory Arguments</h5>
+					<p>The <i>list</i> capability of client charges supports <b>pagination</b>.</p>
+					<h5>Optional Arguments</h5>
 					<dl class="argument-list">
 						<dt>offset</dt>
 						<dd>
@@ -35867,7 +35867,7 @@ Request Body:
 						<dd>
 							String <span>optional</span>
 						</dd>
-						<dd>Only returns those charges which are pending payment (neither paid or waived).</dd>
+						<dd> Filters charges that are pending payment (neither paid or waived).</dd>
           			</dl>
 					<p>Example Requests:</p>				
 					<div class=apiClick>clients/189/charges</div>	
